// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabs snapshot Tabs: 0 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation="horizontal"
    className="tab_list-class"
    role="tablist"
  >
    <div
      aria-controls="tab02"
      aria-selected={false}
      className="tab-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      tab two
    </div>
    <div
      aria-controls="tab03"
      aria-selected={false}
      className="tab-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      tab three
    </div>
    <div
      aria-controls="tab04"
      aria-selected={true}
      className="tab-class tab__active-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      tab four
    </div>
  </div>
  <div
    className="tab_items-class"
  >
    <div
      aria-hidden={true}
      aria-labelledby="tab02"
      className="tab_panel-class tab_panel__hidden-class"
      id="tab02"
      role="tabpanel"
    >
      tab two content
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="tab03"
      className="tab_panel-class tab_panel__hidden-class"
      id="tab03"
      role="tabpanel"
    >
      tab three content
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="tab04"
      className="tab_panel-class"
      id="tab04"
      role="tabpanel"
    >
      tab four content
    </div>
  </div>
</div>
`;

exports[`tabs snapshot Tabs: 1 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation="vertical"
    className="tab_list-class"
    role="tablist"
  >
    <div
      aria-controls="tab01"
      aria-selected={false}
      className="tab-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      tab one
    </div>
    <div
      aria-controls="tab03"
      aria-selected={true}
      className="tab-class tab__active-class"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={0}
    >
      tab three
    </div>
  </div>
  <div
    className="tab_items-class"
  >
    <div
      aria-hidden={true}
      aria-labelledby="tab01"
      className="tab_panel-class tab_panel__hidden-class"
      id="tab01"
      role="tabpanel"
    >
      tab one content
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="tab03"
      className="tab_panel-class"
      id="tab03"
      role="tabpanel"
    >
      tab three content
    </div>
  </div>
</div>
`;

exports[`tabs snapshot Tabs: 2 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation={undefined}
    className="tab_list-class"
    role="tablist"
  />
  <div
    className="tab_items-class"
  />
</div>
`;

exports[`tabs snapshot Tabs: 3 1`] = `
<div
  className="tabs-class"
>
  <div
    aria-label="A set of example text content"
    aria-orientation={undefined}
    className="tab_list-class"
    role="tablist"
  />
  <div
    className="tab_items-class"
  />
</div>
`;
